build/log/idf_py_stdout_output_209435
[1/11] cd /home/vl/esp32/project_my/lvgl_port2/build/esp-idf/main && /home/vl/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/vl/esp32/esp-idf/components/spiffs/spiffsgen.py 0x40000 /home/vl/esp32/project_my/lvgl_port2/main/img /home/vl/esp32/project_my/lvgl_port2/build/ui_img.bin --page-size=256 --obj-name-len=32 --meta-len=4 --use-magic --use-magic-len
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/vl/esp32/project_my/lvgl_port2/build/bootloader/esp-idf/esptool_py && /home/vl/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/vl/esp32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/vl/esp32/project_my/lvgl_port2/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[3/11] Building C object esp-idf/bsp/CMakeFiles/__idf_bsp.dir/sdcard.c.obj
FAILED: esp-idf/bsp/CMakeFiles/__idf_bsp.dir/sdcard.c.obj 
/home/vl/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/vl/esp32/project_my/lvgl_port2/build/config -I/home/vl/esp32/project_my/lvgl_port2/components/bsp -I/home/vl/esp32/esp-idf/components/newlib/platform_include -I/home/vl/esp32/esp-idf/components/freertos/config/include -I/home/vl/esp32/esp-idf/components/freertos/config/include/freertos -I/home/vl/esp32/esp-idf/components/freertos/config/xtensa/include -I/home/vl/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/vl/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/vl/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/vl/esp32/esp-idf/components/freertos/esp_additions/include -I/home/vl/esp32/esp-idf/components/esp_hw_support/include -I/home/vl/esp32/esp-idf/components/esp_hw_support/include/soc -I/home/vl/esp32/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/vl/esp32/esp-idf/components/esp_hw_support/port/esp32/. -I/home/vl/esp32/esp-idf/components/heap/include -I/home/vl/esp32/esp-idf/components/log/include -I/home/vl/esp32/esp-idf/components/soc/include -I/home/vl/esp32/esp-idf/components/soc/esp32 -I/home/vl/esp32/esp-idf/components/soc/esp32/include -I/home/vl/esp32/esp-idf/components/hal/platform_port/include -I/home/vl/esp32/esp-idf/components/hal/esp32/include -I/home/vl/esp32/esp-idf/components/hal/include -I/home/vl/esp32/esp-idf/components/esp_rom/include -I/home/vl/esp32/esp-idf/components/esp_rom/include/esp32 -I/home/vl/esp32/esp-idf/components/esp_rom/esp32 -I/home/vl/esp32/esp-idf/components/esp_common/include -I/home/vl/esp32/esp-idf/components/esp_system/include -I/home/vl/esp32/esp-idf/components/esp_system/port/soc -I/home/vl/esp32/esp-idf/components/esp_system/port/include/private -I/home/vl/esp32/esp-idf/components/xtensa/esp32/include -I/home/vl/esp32/esp-idf/components/xtensa/include -I/home/vl/esp32/esp-idf/components/xtensa/deprecated_include -I/home/vl/esp32/esp-idf/components/lwip/include -I/home/vl/esp32/esp-idf/components/lwip/include/apps -I/home/vl/esp32/esp-idf/components/lwip/include/apps/sntp -I/home/vl/esp32/esp-idf/components/lwip/lwip/src/include -I/home/vl/esp32/esp-idf/components/lwip/port/include -I/home/vl/esp32/esp-idf/components/lwip/port/freertos/include -I/home/vl/esp32/esp-idf/components/lwip/port/esp32xx/include -I/home/vl/esp32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/vl/esp32/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/vl/esp32/esp-idf/components/esp_lcd/include -I/home/vl/esp32/esp-idf/components/esp_lcd/interface -I/home/vl/esp32/esp-idf/components/driver/include -I/home/vl/esp32/esp-idf/components/driver/deprecated -I/home/vl/esp32/esp-idf/components/driver/analog_comparator/include -I/home/vl/esp32/esp-idf/components/driver/dac/include -I/home/vl/esp32/esp-idf/components/driver/gpio/include -I/home/vl/esp32/esp-idf/components/driver/gptimer/include -I/home/vl/esp32/esp-idf/components/driver/i2c/include -I/home/vl/esp32/esp-idf/components/driver/i2s/include -I/home/vl/esp32/esp-idf/components/driver/ledc/include -I/home/vl/esp32/esp-idf/components/driver/mcpwm/include -I/home/vl/esp32/esp-idf/components/driver/parlio/include -I/home/vl/esp32/esp-idf/components/driver/pcnt/include -I/home/vl/esp32/esp-idf/components/driver/rmt/include -I/home/vl/esp32/esp-idf/components/driver/sdio_slave/include -I/home/vl/esp32/esp-idf/components/driver/sdmmc/include -I/home/vl/esp32/esp-idf/components/driver/sigma_delta/include -I/home/vl/esp32/esp-idf/components/driver/spi/include -I/home/vl/esp32/esp-idf/components/driver/temperature_sensor/include -I/home/vl/esp32/esp-idf/components/driver/touch_sensor/include -I/home/vl/esp32/esp-idf/components/driver/twai/include -I/home/vl/esp32/esp-idf/components/driver/uart/include -I/home/vl/esp32/esp-idf/components/driver/usb_serial_jtag/include -I/home/vl/esp32/esp-idf/components/driver/touch_sensor/esp32/include -I/home/vl/esp32/esp-idf/components/esp_pm/include -I/home/vl/esp32/esp-idf/components/esp_ringbuf/include -I/home/vl/esp32/project_my/lvgl_port2/components/lvgl -I/home/vl/esp32/project_my/lvgl_port2/components/lvgl/src -I/home/vl/esp32/project_my/lvgl_port2/components -I/home/vl/esp32/project_my/lvgl_port2/components/lvgl/examples -I/home/vl/esp32/project_my/lvgl_port2/components/lvgl/demos -I/home/vl/esp32/esp-idf/components/esp_timer/include -I/home/vl/esp32/esp-idf/components/sdmmc/include -I/home/vl/esp32/esp-idf/components/fatfs/diskio -I/home/vl/esp32/esp-idf/components/fatfs/src -I/home/vl/esp32/esp-idf/components/fatfs/vfs -I/home/vl/esp32/esp-idf/components/wear_levelling/include -I/home/vl/esp32/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=/home/vl/esp32/project_my/lvgl_port2=. -fmacro-prefix-map=/home/vl/esp32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bsp/CMakeFiles/__idf_bsp.dir/sdcard.c.obj -MF esp-idf/bsp/CMakeFiles/__idf_bsp.dir/sdcard.c.obj.d -o esp-idf/bsp/CMakeFiles/__idf_bsp.dir/sdcard.c.obj -c /home/vl/esp32/project_my/lvgl_port2/components/bsp/sdcard.c
/home/vl/esp32/project_my/lvgl_port2/components/bsp/sdcard.c: In function 'sdcard_init':
/home/vl/esp32/project_my/lvgl_port2/components/bsp/sdcard.c:30:1: error: control reaches end of non-void function [-Werror=return-type]
   30 | }
      | ^
cc1: some warnings being treated as errors
[4/11] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
